# oop-coursework-s3

./: Array.h  CMakeLists.txt  Customer.cpp  Customer.h  DailyReport.cpp  DailyReport.h  Date.cpp  Date.h  Order.cpp  Order.h  Product.cpp  Product.h  README.md  Readable.h  ValidationException.h  Writable.h  diagram.puml  main.cpp
docs/: 1_АркушКурсовоїНаПапку_ТІ-81.docx  ~$ломаха_Записка.docx  ~$ломаха_ПрогрКод.docx  Соломаха_ЗАПИСКА.docx  Соломаха_Записка.docx  Соломаха_ПрогрКод.docx
table/: ATable.h  Appearance.cpp  Appearance.h  Cell.cpp  Cell.h  Column.cpp  Column.h  ConstColumn.cpp  ConstColumn.h  DefaultCells.h  Main.cpp  Object.cpp  Object.h  SimpleColumn.cpp  SimpleColumn.h  Table.cpp  Table.h  TableExceptions.h
